# ncc

./: Dockerfile  build  pyproject.toml  run  test
ncc/: __init__.py  __main__.py  generate.py  lexer.py  parser.py
tests/: test_compiler.sh
tests/part1/: a.out  a.s
