[tool.poetry]
name = "ncc"
version = "0.1.0"
description = "nick's c compiler"
authors = ["nick ouellet <nick@ouellet.dev>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
parsy = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ncc = 'ncc:main'
